Fix select box vertical alignment (#3)
* more doc

* add a minumum height to labels for better vertical alignment

* update readme

--- a/src/css/better-datetime.css
+++ b/src/css/better-datetime.css
@@ -1,6 +1,7 @@
 .sq-form-question-datetime label {
   box-sizing: border-box;
   float: left;
+  min-height: 20px;
 }
 
 .sq-form-question-datetime fieldset .styled-select {
